--- a/Wenskaarten/App.xaml
+++ b/Wenskaarten/App.xaml
@@ -1,9 +1,20 @@
 ﻿<Application x:Class="Wenskaarten.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Wenskaarten"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Wenskaarten">
+    <!--StartupUri="View\WenskaartWindow.xaml">-->
     <Application.Resources>
-         
+        <ResourceDictionary Source="Resources/StandaardStijlen.xaml">
+            
+            <!--<Style TargetType="{x:Type Ellipse}">
+                <Setter Property="Height" Value="40"></Setter>
+                <Setter Property="Width" Value="40"></Setter>
+                <Setter Property="StrokeThickness" Value="5"></Setter>
+                <Setter Property="Stroke" Value="Red"></Setter>
+                <Setter Property="Visibility" Value="Visible"></Setter>
+            </Style>-->
+        </ResourceDictionary>
+    
     </Application.Resources>
+
 </Application>
